Validated JsonPatch
